# libctrelf

./: .gitignore  COPYING.txt  README  common.mk  configure.ac  meson.build
include/: ctrelf.h
src/: Makefile.am  arm9loaderhax.ld  ctrelf.c
